--- a/projeto/cd_projeto_aplicado_IV_entrega_1.ipynb
+++ b/projeto/cd_projeto_aplicado_IV_entrega_1.ipynb
@@ -44,7 +44,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Trabalho decente e mercado de trabalho: análise temporal da taxa de desocupação no Brasil**:\n",
+        "# **Trabalho decente e mercado de trabalho: análise temporal da taxa de desocupação no Brasil**\n",
         "\n",
         "---"
       ],
