--- a/projeto/cd_projeto_aplicado_IV_entrega_1.ipynb
+++ b/projeto/cd_projeto_aplicado_IV_entrega_1.ipynb
@@ -63,7 +63,7 @@
       "metadata": {
         "id": "yky3TEyXoGaY"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -71,7 +71,13 @@
       "source": [
         "# **Introdução**\n",
         "\n",
-        "Apresentar o contexto temático no qual o projeto se desenvolve, incluindo a área de conhecimento envolvida, além da descrição e do detalhamento do problema selecionado.\n",
+        "A taxa de desocupação é um dos principais indicadores para avaliar a situação do mercado de trabalho e a estabilidade econômica de um país. No Brasil, esse índice tem oscilado significativamente desde 2012, refletindo tanto momentos de expansão quanto de retração econômica. Entre os fatores que marcaram a trajetória do desemprego ao longo desse período estão a recessão econômica de 2015–2016, os impactos da pandemia de COVID-19 a partir de 2020 e, mais recentemente, a retomada do crescimento acompanhada pela formalização de postos de trabalho (IBGE, 2024).\n",
+        "\n",
+        "Em 2024, a taxa média de desocupação no Brasil foi de 6,6%, o menor valor desde o início da série histórica da PNAD Contínua em 2012 (AGÊNCIA GOV, 2025). No segundo trimestre de 2025, esse indicador caiu ainda mais, alcançando 5,8%, o menor patamar já registrado, representando queda de 1,2 ponto percentual em relação ao trimestre anterior e de 1,1 ponto percentual frente ao mesmo período de 2024 (BRASIL, 2025). Esse resultado reflete não apenas o aumento da população ocupada, mas também a expansão do emprego formal, com o número de trabalhadores com carteira assinada no setor privado chegando a 39 milhões, o maior já registrado no país (BRASIL, 2025).\n",
+        "\n",
+        "Esses avanços estão diretamente alinhados ao Objetivo de Desenvolvimento Sustentável 8 (ODS 8), que visa “promover o crescimento econômico sustentado, inclusivo e sustentável, o emprego pleno e produtivo e o trabalho decente para todas e todos” (NAÇÕES UNIDAS, 2023). Nesse contexto, acompanhar a evolução da taxa de desocupação não é apenas relevante para mensurar o desempenho conjuntural da economia, mas também para monitorar o progresso do Brasil frente às metas globais estabelecidas pela ONU.\n",
+        "\n",
+        "A análise de séries temporais da taxa de desocupação entre 2012 e 2025 permite identificar tendências estruturais, ciclos econômicos e efeitos de choques externos sobre o mercado de trabalho. Além disso, possibilita avaliar a eficácia de políticas públicas voltadas à geração de emprego e à formalização da ocupação. A disponibilidade de dados trimestrais consistentes torna essa série adequada para análises estatísticas, modelagens preditivas e visualizações que podem subsidiar a tomada de decisão tanto no setor público quanto no privado.\n",
         "\n"
       ],
       "metadata": {
@@ -83,7 +89,13 @@
       "source": [
         "# **Motivações e justificativa**\n",
         "\n",
-        "Conter argumentos que demonstrem a relevância do tema, os interesses e benefícios envolvidos e o potencial de aplicabilidade da solução."
+        "A escolha da taxa de desocupação como objeto de estudo justifica-se pela centralidade desse indicador na compreensão da dinâmica econômica e social de um país. O desemprego afeta diretamente a renda das famílias, a capacidade de consumo, a arrecadação tributária e, em última instância, a qualidade de vida da população. No caso brasileiro, a taxa de desocupação apresentou oscilações marcantes desde 2012, refletindo períodos de recessão, instabilidade política, crise sanitária durante a pandemia de COVID-19 e, mais recentemente, sinais consistentes de recuperação econômica (IBGE, 2024; BRASIL, 2025).\n",
+        "\n",
+        "Do ponto de vista dos Objetivos de Desenvolvimento Sustentável (ODS), este estudo dialoga especialmente com o ODS 8 – Trabalho decente e crescimento econômico, que tem como meta promover o emprego pleno, produtivo e de qualidade para todos. Analisar a evolução da desocupação por meio de séries temporais contribui para identificar gargalos estruturais do mercado de trabalho e apontar avanços que aproximam o país das metas globais estabelecidas pela ONU (NAÇÕES UNIDAS, 2023).\n",
+        "\n",
+        "O tema também é relevante para gestores públicos, formuladores de políticas e empresas, uma vez que a compreensão das flutuações do desemprego auxilia na definição de estratégias para geração de empregos, qualificação profissional e estímulo ao crescimento econômico sustentável. Para a sociedade em geral, a redução da taxa de desocupação está associada à melhoria nas condições de vida, maior inclusão social e diminuição da vulnerabilidade de grupos populacionais historicamente mais afetados pelo desemprego.\n",
+        "\n",
+        "Adicionalmente, o uso de técnicas de análise de séries temporais oferece não apenas a possibilidade de avaliar tendências passadas, mas também de projetar cenários futuros. Isso amplia a aplicabilidade da solução em campos como economia do trabalho, planejamento governamental e estudos acadêmicos voltados ao desenvolvimento sustentável. Assim, este trabalho se mostra relevante tanto pela sua contribuição científica quanto pela sua utilidade prática, reforçando a importância de alinhar análises quantitativas a objetivos sociais mais amplos, como os propostos pelos ODS."
       ],
       "metadata": {
         "id": "jE9yYM31oqr3"
@@ -117,7 +129,15 @@
       "source": [
         "# **Referências**\n",
         "\n",
-        "Expor a relação dos recursos utilizados na elaboração do documento, desde que tenham sido devidamente citados. Para isso, devem ser utilizadas as normas da ABNT.\n"
+        "AGÊNCIA GOV. Taxa de desemprego fica em 6,2% em dezembro e média do ano fica em 6,6%, menor patamar da série histórica. Agência Gov, 31 jan. 2025. Disponível em: https://agenciagov.ebc.com.br/noticias/202501/taxa-de-desocupacao-fica-em-6-2-em-dezembro-e-media-do-ano-fica-em-6-6-menor-patamar-da-serie-historica Acesso em: 7 set. 2025.\n",
+        "\n",
+        "BRASIL. Desemprego cai a 5,8% no segundo trimestre, menor nível da série histórica. Secretaria de Comunicação Social, 31 jul. 2025. Disponível em:\n",
+        "https://www.gov.br/secom/pt-br/assuntos/noticias/2025/07/desemprego-cai-a-5-8-no-segundo-trimestre-menor-nivel-da-serie-historica\n",
+        "Acesso em: 7 set. 2025.\n",
+        "\n",
+        "IBGE. PNAD Contínua: Pesquisa Nacional por Amostra de Domicílios Contínua. Rio de Janeiro: IBGE, 2024. Disponível em: https://www.ibge.gov.br/estatisticas/sociais/trabalho/9171-pesquisa-nacional-por-amostra-de-domicilios-continua-trimestral.html Acesso em: 7 set. 2025.\n",
+        "\n",
+        "NAÇÕES UNIDAS. Objetivo 8: Trabalho decente e crescimento econômico. ONU Brasil, 2023. Disponível em: https://brasil.un.org/pt-br/sdgs/8 Acesso em: 7 set. 2025.\n"
       ],
       "metadata": {
         "id": "KucOdKJLo3bG"
