--- a/projeto/cd_projeto_aplicado_IV_entrega_1.ipynb
+++ b/projeto/cd_projeto_aplicado_IV_entrega_1.ipynb
@@ -106,7 +106,29 @@
       "source": [
         "# **Objetivo**\n",
         "\n",
-        "Descrever as pretensões e metas a serem alcançadas pelo projeto em relação ao problema escolhido pelo grupo e descrito na introdução.\n",
+        "Analisar a evolução da taxa de desocupação no Brasil entre 2012 e 2025 por meio de técnicas de séries temporais, a fim de identificar tendências, padrões sazonais e impactos de eventos econômicos relevantes, relacionando os resultados ao Objetivo de Desenvolvimento Sustentável 8 (ODS 8) — trabalho decente e crescimento econômico.\n",
+        "\n",
+        "**Objetivos específicos**\n",
+        "\n",
+        "* Coletar e organizar os dados trimestrais da taxa de desocupação disponibilizados pelo IBGE (PNAD Contínua), estruturando-os em formato adequado para análise estatística.\n",
+        "\n",
+        "* Construir representações gráficas que evidenciem a evolução do desemprego no período, destacando ciclos, sazonalidades e pontos de ruptura na série histórica.\n",
+        "\n",
+        "* Aplicar técnicas de análise de séries temporais (como decomposição de tendência e sazonalidade) para compreender o comportamento do indicador ao longo do tempo.\n",
+        "\n",
+        "* Comparar a taxa de desocupação entre diferentes períodos (pré-crise de 2015–2016, pandemia de COVID-19 e recuperação recente) para avaliar variações estruturais.\n",
+        "\n",
+        "* Realizar análise desagregada por Unidade da Federação (UF), identificando disparidades regionais na taxa de desocupação e suas causas associadas.\n",
+        "\n",
+        "* Identificar padrões sazonais do desemprego, de modo a orientar o planejamento de ações governamentais e políticas públicas direcionadas para os períodos de maior vulnerabilidade.\n",
+        "\n",
+        "* Relacionar os resultados da análise com as metas do ODS 8, destacando avanços e desafios do Brasil na promoção do emprego pleno e produtivo.\n",
+        "\n",
+        "* Gerar subsídios para a formulação de políticas públicas, indicando como os padrões detectados podem orientar medidas de combate ao desemprego e incentivo à formalização do trabalho.\n",
+        "\n",
+        "* Propor cenários e projeções exploratórias sobre a evolução do desemprego, de forma a contribuir com decisões estratégicas de governos, empresas e sociedade civil.\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
