--- a/projeto/cd_projeto_aplicado_IV_entrega_1.ipynb
+++ b/projeto/cd_projeto_aplicado_IV_entrega_1.ipynb
@@ -140,11 +140,141 @@
       "source": [
         "# **Descrição da base de dados**\n",
         "\n",
-        "Apresentar a descrição do conjunto de dados que será usado no trabalho e apontando quais informações estão disponíveis, sua estrutura e organização, sua forma e seu período de coleta, além da indicação da fonte de dados."
+        "O presente trabalho utiliza como base empírica a Tabela 4099 do Sistema IBGE de Recuperação Automática (SIDRA), derivada da Pesquisa Nacional por Amostra de Domicílios Contínua (PNAD Contínua), conduzida pelo Instituto Brasileiro de Geografia e Estatística (IBGE).\n",
+        "\n",
+        "Essa tabela apresenta a taxa de desocupação da população de 14 anos ou mais de idade, em periodicidade trimestral, cobrindo o período de 2012 até 2025. Os dados estão disponíveis para diferentes níveis geográficos, incluindo Brasil, Grandes Regiões e Unidades da Federação (UF).\n",
+        "\n",
+        "**Variável principal**: Taxa de desocupação (%)\n",
+        "\n",
+        "**Periodicidade**: trimestral\n",
+        "\n",
+        "**Unidade de análise**: pessoas com 14 anos ou mais na força de trabalho\n",
+        "\n",
+        "**Abrangência geográfica**: Brasil, regiões e UFs\n",
+        "\n",
+        "**Período de coleta**: 2012 (início da PNAD Contínua) até 2025 (última atualização disponível)\n",
+        "\n",
+        "**Fonte oficial**: IBGE – SIDRA – Tabela 4099: Taxa de desocupação da população de 14 anos ou mais de idade. Disponível em: https://sidra.ibge.gov.br/Tabela/4099\n",
+        "\n",
+        "\n",
+        "Esse conjunto de dados é particularmente adequado para a análise de séries temporais, pois combina longa série histórica, regularidade trimestral e abrangência nacional e regional, permitindo avaliar tendências, sazonalidades e choques no mercado de trabalho brasileiro.\n",
+        "\n"
       ],
       "metadata": {
         "id": "VG897rGOo1Rv"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests\n",
+        "import pandas as pd\n",
+        "\n",
+        "# URLs (ajuste o código da variável 'v' se for diferente na sua consulta)\n",
+        "URL_BRASIL = \"https://apisidra.ibge.gov.br/values/t/4099/n1/all/v/4099/p/all?formato=json\"\n",
+        "URL_UF     = \"https://apisidra.ibge.gov.br/values/t/4099/n3/all/v/4099/p/all?formato=json\"\n",
+        "\n",
+        "HEADERS = {\"Accept\": \"application/json\"}\n",
+        "\n",
+        "def load_sidra_json(url: str) -> pd.DataFrame:\n",
+        "    r = requests.get(url, headers=HEADERS, timeout=60)\n",
+        "    r.raise_for_status()\n",
+        "    data = r.json()\n",
+        "    return pd.DataFrame(data)\n",
+        "\n",
+        "# Carregar datasets\n",
+        "df_brasil = load_sidra_json(URL_BRASIL)\n",
+        "df_uf = load_sidra_json(URL_UF)\n",
+        "\n",
+        "# Descrição Brasil\n",
+        "print(\"=== Brasil (Tabela 4099) ===\")\n",
+        "print(\"Número de linhas:\", len(df_brasil))\n",
+        "print(\"Colunas:\", list(df_brasil.columns))\n",
+        "print(\"\\nTipos de dados:\")\n",
+        "print(df_brasil.dtypes)\n",
+        "\n",
+        "# Descrição UFs\n",
+        "print(\"\\n=== UFs (Tabela 4099) ===\")\n",
+        "print(\"Número de linhas:\", len(df_uf))\n",
+        "print(\"Colunas:\", list(df_uf.columns))\n",
+        "print(\"\\nTipos de dados:\")\n",
+        "print(df_uf.dtypes)\n",
+        "\n",
+        "\n",
+        "# Dicionário de colunas (mais comuns no SIDRA)\n",
+        "descricao_colunas = {\n",
+        "    \"NC\": \"Nível de cobertura dos dados (geralmente não usado diretamente).\",\n",
+        "    \"D1C\": \"Código da primeira dimensão (ex.: código do Brasil, Região ou UF).\",\n",
+        "    \"D1N\": \"Nome da primeira dimensão (ex.: Brasil, Nordeste, São Paulo).\",\n",
+        "    \"D2C\": \"Código da segunda dimensão (período).\",\n",
+        "    \"D2N\": \"Nome do período (ex.: 2012 1º trimestre, 2025 2º trimestre).\",\n",
+        "    \"V\": \"Valor da variável selecionada (neste caso, taxa de desocupação em %).\"\n",
+        "}\n",
+        "\n",
+        "print(\"\\n=== Dicionário de colunas ===\")\n",
+        "for col, desc in descricao_colunas.items():\n",
+        "    if col in df_brasil.columns or col in df_uf.columns:\n",
+        "        print(f\"{col}: {desc}\")\n"
+      ],
+      "metadata": {
+        "id": "EscEon0FIiPF",
+        "outputId": "435f77aa-80df-4b21-d9c1-62bf82be57e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=== Brasil (Tabela 4099) ===\n",
+            "Número de linhas: 55\n",
+            "Colunas: ['NC', 'NN', 'MC', 'MN', 'V', 'D1C', 'D1N', 'D2C', 'D2N', 'D3C', 'D3N']\n",
+            "\n",
+            "Tipos de dados:\n",
+            "NC     object\n",
+            "NN     object\n",
+            "MC     object\n",
+            "MN     object\n",
+            "V      object\n",
+            "D1C    object\n",
+            "D1N    object\n",
+            "D2C    object\n",
+            "D2N    object\n",
+            "D3C    object\n",
+            "D3N    object\n",
+            "dtype: object\n",
+            "\n",
+            "=== UFs (Tabela 4099) ===\n",
+            "Número de linhas: 1459\n",
+            "Colunas: ['NC', 'NN', 'MC', 'MN', 'V', 'D1C', 'D1N', 'D2C', 'D2N', 'D3C', 'D3N']\n",
+            "\n",
+            "Tipos de dados:\n",
+            "NC     object\n",
+            "NN     object\n",
+            "MC     object\n",
+            "MN     object\n",
+            "V      object\n",
+            "D1C    object\n",
+            "D1N    object\n",
+            "D2C    object\n",
+            "D2N    object\n",
+            "D3C    object\n",
+            "D3N    object\n",
+            "dtype: object\n",
+            "\n",
+            "=== Dicionário de colunas ===\n",
+            "NC: Nível de cobertura dos dados (geralmente não usado diretamente).\n",
+            "D1C: Código da primeira dimensão (ex.: código do Brasil, Região ou UF).\n",
+            "D1N: Nome da primeira dimensão (ex.: Brasil, Nordeste, São Paulo).\n",
+            "D2C: Código da segunda dimensão (período).\n",
+            "D2N: Nome do período (ex.: 2012 1º trimestre, 2025 2º trimestre).\n",
+            "V: Valor da variável selecionada (neste caso, taxa de desocupação em %).\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -159,7 +289,9 @@
         "\n",
         "IBGE. PNAD Contínua: Pesquisa Nacional por Amostra de Domicílios Contínua. Rio de Janeiro: IBGE, 2024. Disponível em: https://www.ibge.gov.br/estatisticas/sociais/trabalho/9171-pesquisa-nacional-por-amostra-de-domicilios-continua-trimestral.html Acesso em: 7 set. 2025.\n",
         "\n",
-        "NAÇÕES UNIDAS. Objetivo 8: Trabalho decente e crescimento econômico. ONU Brasil, 2023. Disponível em: https://brasil.un.org/pt-br/sdgs/8 Acesso em: 7 set. 2025.\n"
+        "NAÇÕES UNIDAS. Objetivo 8: Trabalho decente e crescimento econômico. ONU Brasil, 2023. Disponível em: https://brasil.un.org/pt-br/sdgs/8 Acesso em: 7 set. 2025.\n",
+        "\n",
+        "IBGE. Tabela 4099: Taxas de desocupação e de subutilização da força de trabalho, na semana de referência, das pessoas de 14 anos ou mais de idade. SIDRA – Sistema IBGE de Recuperação Automática, [s. l.], 2025. Disponível em: https://sidra.ibge.gov.br/Tabela/4099 Acesso em: 7 set. 2025.\n"
       ],
       "metadata": {
         "id": "KucOdKJLo3bG"
