--- a/projeto/cd_projeto_aplicado_iv_entrega_2.ipynb
+++ b/projeto/cd_projeto_aplicado_iv_entrega_2.ipynb
@@ -58,11 +58,8 @@
         "#@title **Identificação do Grupo e Opção do Projeto**\n",
         "\n",
         "#@markdown Integrantes do Grupo, nome completo em ordem alfabética (*informe: \\<nome\\>, \\<matrícula\\>*)\n",
-        "Aluno1 = 'Aluno 1, 123456789' #@param {type:\"string\"}\n",
-        "Aluno2 = 'Aluno 2, 159327486' #@param {type:\"string\"}\n",
-        "Aluno3 = 'Aluno 3, 987654321' #@param {type:\"string\"}\n",
-        "Aluno4 = 'Aluno 4, 753645987' #@param {type:\"string\"}\n",
-        "Aluno5 = 'Aluno 5, 456789123' #@param {type:\"string\"}\n"
+        "Aluno1 = 'Luis Fernando do Lago Attarian, 10089158' #@param {type:\"string\"}\n",
+        "Aluno2 = 'Kelly Graziely dos Santos Pena, ' #@param {type:\"string\"}\n"
       ],
       "metadata": {
         "id": "yky3TEyXoGaY"
@@ -75,7 +72,13 @@
       "source": [
         "# **Introdução**\n",
         "\n",
-        "Juntar os tópicos de contexto, motivação, objetivo geral, objetivos específicos (incluir a bases de dados que será explorada) e justificativa em um único tópico.\n",
+        "A taxa de desocupação é um dos principais indicadores para compreender a dinâmica do mercado de trabalho e a estabilidade econômica do Brasil. Desde 2012, esse índice tem oscilado em resposta a crises, como a recessão de 2015–2016 e a pandemia de COVID-19, e a períodos de recuperação, como a expansão recente do emprego formal (IBGE, 2024; BRASIL, 2025). Em 2024, a taxa média de 6,6% atingiu o menor nível da série histórica, e em 2025 o índice recuou ainda mais para 5,8%, sinalizando avanços consistentes alinhados ao Objetivo de Desenvolvimento Sustentável 8 (ODS 8), que busca promover trabalho decente e crescimento econômico (NAÇÕES UNIDAS, 2023).\n",
+        "\n",
+        "O projeto utiliza como base de dados a Pesquisa Nacional por Amostra de Domicílios Contínua (PNAD Contínua), realizada pelo IBGE, que disponibiliza a taxa de desocupação com periodicidade trimestral, abrangendo todas as Unidades da Federação e permitindo comparações regionais. Trata-se de uma fonte oficial, padronizada e amplamente utilizada em estudos acadêmicos e formulação de políticas públicas, o que garante confiabilidade e relevância às análises.\n",
+        "\n",
+        "O objetivo geral é analisar a evolução da taxa de desocupação no Brasil entre 2012 e 2025 por meio de técnicas de séries temporais, identificando tendências, padrões sazonais e impactos de eventos econômicos. Especificamente, busca-se organizar e explorar os microdados da PNAD Contínua, construir representações gráficas que evidenciem ciclos e rupturas, decompor a série temporal em tendência, sazonalidade e ruído, comparar períodos críticos, avaliar disparidades regionais e relacionar os resultados às metas do ODS 8.\n",
+        "\n",
+        "A escolha da taxa de desocupação justifica-se por sua centralidade na dinâmica econômica e social: o desemprego afeta renda, consumo, arrecadação e inclusão social. Ao mesmo tempo, a análise histórica e comparativa permite gerar subsídios para políticas públicas e decisões estratégicas, reforçando a importância de alinhar evidências quantitativas a objetivos sociais mais amplos, como os definidos pela ONU.\n",
         "\n"
       ],
       "metadata": {
@@ -98,11 +101,22 @@
       "source": [
         "# **Pipeline da Solução**\n",
         "\n",
-        "Apresentar e discutir uma proposta de pipeline para processar os dados e chegar na solução do problema em análise.\n",
+        "## **Visão geral**\n",
+        "\n",
+        "[ Coleta ] → [ Padronização ] → [ Qualidade/Imputação ] → [ EDA ] → [ Decomposição STL ] → [ Diagnóstico ACF/PACF ] → [ Comparações (períodos/UF) ] → [ Síntese dos Achados ]\n",
         "\n"
       ],
       "metadata": {
         "id": "Tax--lV7ov7G"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Coleta e organização**"
+      ],
+      "metadata": {
+        "id": "P5NQqw0rCaJO"
       }
     },
     {
