--- a/projeto/cd_projeto_aplicado_iv_entrega_2.ipynb
+++ b/projeto/cd_projeto_aplicado_iv_entrega_2.ipynb
@@ -59,7 +59,7 @@
         "\n",
         "#@markdown Integrantes do Grupo, nome completo em ordem alfabética (*informe: \\<nome\\>, \\<matrícula\\>*)\n",
         "Aluno1 = 'Luis Fernando do Lago Attarian, 10089158' #@param {type:\"string\"}\n",
-        "Aluno2 = 'Kelly Graziely dos Santos Pena, ' #@param {type:\"string\"}\n"
+        "Aluno2 = 'Kelly Graziely dos Santos Pena, 10416108' #@param {type:\"string\"}\n"
       ],
       "metadata": {
         "id": "yky3TEyXoGaY"
@@ -122,7 +122,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**1) Setup e coleta (SIDRA/IBGE – Tabela 4099)**"
+        "## Setup e coleta (SIDRA/IBGE – Tabela 4099)"
       ],
       "metadata": {
         "id": "wd6g5mdPDyyL"
@@ -939,7 +939,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**2) Descrição inicial (atributos e observações)**"
+        "## Descrição inicial (atributos e observações)"
       ],
       "metadata": {
         "id": "0rKjKOOFEAQB"
@@ -1039,7 +1039,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**4) Limpeza e padronização (funções auxiliares)**"
+        "# Padronização"
+      ],
+      "metadata": {
+        "id": "klDkJId_Zrnn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Limpeza e padronização (funções auxiliares)"
       ],
       "metadata": {
         "id": "WhF3goF4EYCS"
@@ -1101,7 +1110,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**5) Transformar Brasil (tidy: atributos/observações)**"
+        "## Transformar Brasil (tidy: atributos/observações)**"
       ],
       "metadata": {
         "id": "HaHHF9-_E2d0"
@@ -1521,7 +1530,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**6) Transformar UFs (tidy, com uf_sigla quando disponível no nome)**"
+        "## Transformar UFs (tidy, com uf_sigla quando disponível no nome)"
       ],
       "metadata": {
         "id": "mGW6bMRLEQUV"
@@ -1571,12 +1580,12 @@
         "print(df_uf.dtypes)"
       ],
       "metadata": {
-        "id": "T8i9RlWmN_sM",
-        "outputId": "3a22dd3c-11ad-4c95-b0c5-9cde89e62045",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 554
-        }
+        },
+        "id": "T8i9RlWmN_sM",
+        "outputId": "3a22dd3c-11ad-4c95-b0c5-9cde89e62045"
       },
       "execution_count": 29,
       "outputs": [
