--- a/projeto/cd_projeto_aplicado_iv_entrega_2.ipynb
+++ b/projeto/cd_projeto_aplicado_iv_entrega_2.ipynb
@@ -90,9 +90,13 @@
       "source": [
         "# **Referencial Teórico**\n",
         "\n",
-        "(1 página) Defir resumidamente os principais conceitos envolvidos na sua solução. Discutir os trabalhos correlacionados. Apresentar alternativas de solução que foram empregadas no mesmo problema ou problemas semelhantes, e suas vantagens e limitações. Indicar referências ao longo do texto (padrão ABNT)."
-      ],
-      "metadata": {
+        "A taxa de desocupação mede a porcentagem de pessoas que querem trabalhar, mas não encontram emprego, sendo um dos principais termômetros da economia (IBGE, 2024). Esse índice muda conforme o ritmo de crescimento, crises e políticas públicas. Estudos como os de Barros e Corseuil (2021) e Firpo et al. (2022) mostram que recessões e eventos inesperados, como a pandemia de COVID-19, impactam diretamente o desemprego. \n'
+        "Para entender essas variações ao longo do tempo, utilizam-se **séries temporais**, que ajudam a ver tendência, sazonalidade e momentos de ruptura. Modelos tradicionais como o ARIMA são bons para prever dados estáveis, mas têm limitações em períodos de grandes mudanças (Carvalho; Moreira, 2020). A técnica de **decomposição STL** (*Seasonal-Trend decomposition using Loess*), recomendada por Hyndman e Athanasopoulos (2018), é mais flexível: separa a série em tendência, padrão sazonal e ruído, mesmo quando os ciclos mudam de forma. Modelos de espaço de estado também são uma opção, embora mais complexos (Harvey, 1990).\", 
+
+Pesquisas brasileiras recentes, como as de Silva e Porsse (2021) e Santos e Porsse (2022), reforçam a importância de acompanhar o desemprego com métodos estatísticos e de aprendizado de máquina. Em escala global, a OIT (ILO, 2023) e a ONU, no ODS 8, destacam que monitorar o mercado de trabalho é essencial para políticas de emprego e crescimento sustentável.  
+
+Com base nesses trabalhos, este projeto analisa a taxa de desocupação do Brasil entre 2012 e 2025 usando a decomposição STL, por ser uma abordagem clara e robusta, que facilita a identificação de tendências e a comunicação dos resultados para a sociedade e para gestores públicos.
+     {
         "id": "jE9yYM31oqr3"
       }
     },
