--- a/projeto/cd_projeto_aplicado_iv_entrega_2.ipynb
+++ b/projeto/cd_projeto_aplicado_iv_entrega_2.ipynb
@@ -128,7 +128,7 @@
         "\n",
         "## **Visão geral**\n",
         "\n",
-        "[ Coleta ] → [ Padronização ] → [ EDA ] → [ Decomposição STL ] → [ Diagnóstico ACF/PACF ] → [ Comparações (períodos) ]\n",
+        "[ Coleta ] → [ Padronização ] → [ EDA ] → [ Decomposição STL ] → [ Diagnóstico ACF/PACF ] → [ Comparações (períodos) ] → [ Síntese dos Achados ]\n",
         "\n"
       ],
       "metadata": {
