--- a/projeto/cd_projeto_aplicado_iv_entrega_2.ipynb
+++ b/projeto/cd_projeto_aplicado_iv_entrega_2.ipynb
@@ -44,7 +44,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Titulo do Projeto**:\n",
+        "# **Trabalho decente e mercado de trabalho: análise temporal da taxa de desocupação no Brasil**\n",
         "\n",
         "---"
       ],
@@ -186,7 +186,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1038
         },
         "id": "1Dyk5BXYD2QD",
         "outputId": "76c6e4ef-9875-4cc2-d1d2-a39fda6fd2b5"
@@ -1003,7 +1003,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "LgasliyTEKiX",
         "outputId": "12b4281f-83bb-4f6a-ffdf-9d91b340ecbe"
@@ -2069,7 +2070,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "O859sIasccMO",
         "outputId": "698ea781-d4bd-49c6-8780-79e03e269dc4"
@@ -4438,7 +4440,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1828
         },
         "id": "vOw1rlZ8tpzj",
         "outputId": "ceb4bdc5-c12e-4250-a882-14f373e57c28"
