--- a/projeto/cd_projeto_aplicado_IV_entrega_1.ipynb
+++ b/projeto/cd_projeto_aplicado_IV_entrega_1.ipynb
@@ -59,6 +59,7 @@
         "\n",
         "#@markdown Integrantes do Grupo, nome completo em ordem alfabética (*informe: \\<nome\\>, \\<matrícula\\>*)\n",
         "Aluno1 = 'Luis Fernando do Lago Attarian, 10089158' #@param {type:\"string\"}\n"
+        "Aluno2 = 'Kelly Graziely dos Santos Pena, 10416108' #@param {type:\"string\"}\n"
       ],
       "metadata": {
         "id": "yky3TEyXoGaY"
