--- a/projeto/cd_projeto_aplicado_IV_entrega_3.ipynb
+++ b/projeto/cd_projeto_aplicado_IV_entrega_3.ipynb
@@ -118,23 +118,23 @@
         "\n",
         "3) EDA (analítica e gráfica)\n",
         "Estatísticas descritivas e visualizações para entender o fenômeno:\n",
-        "• Série temporal do Brasil;\n",
-        "• Boxplot por trimestre (sazonalidade);\n",
-        "• Comparações entre UFs (médias e volatilidade);\n",
-        "• Comparação entre períodos macroeconômicos (pré-crise, crise, pandemia, recuperação).\n",
+        "* Série temporal do Brasil;\n",
+        "* Boxplot por trimestre (sazonalidade);\n",
+        "* Comparações entre UFs (médias e volatilidade);\n",
+        "* Comparação entre períodos macroeconômicos (pré-crise, crise, pandemia, recuperação).\n",
         "Essa etapa gera os “achados” iniciais e hipóteses para a modelagem.\n",
         "\n",
         "4) Decomposição STL (tendência, sazonalidade, resíduo)\n",
         "Usamos STL (period=4) para separar a série em componentes e obter a série ajustada sazonalmente (valor_aj_sazonal). Entregas: colunas stl_trend, stl_season e valor_aj_sazonal, que permitem comparar níveis sem viés sazonal e quantificar a amplitude da sazonalidade.\n",
         "\n",
         "5) Diagnóstico ACF/PACF\n",
-        "Aplicamos ACF/PACF na série ajustada (e, se necessário, nas versões diferenciadas Δ1/Δ4) para avaliar memória temporal e sinais sazonais residuais. Esse diagnóstico orienta ordens candidatas de modelos AR/MA/SAR e fundamenta comparações robustas entre períodos e regiões.\n",
+        "Aplicamos ACF/PACF na série ajustada (e, se necessário, nas versões diferenciadas Δ1/Δ4) para avaliar memória temporal e sinais sazonais residuais.\n",
         "\n",
         "Resultado esperado desta etapa: um notebook com dados padronizados, painéis EDA, componentes STL e gráficos/tabelas ACF/PACF, prontos para alimentar a análise final e futuras projeções exploratórias, alinhadas ao ODS 8.\n",
         "\n",
         "## **Visão geral**\n",
         "\n",
-        "[ Coleta ] → [ Padronização ] → [ EDA ] → [ Decomposição STL ] → [ Diagnóstico ACF/PACF ] → [ Comparações (períodos) ] → [ Síntese dos Achados ]"
+        "[ Coleta ] → [ Padronização ] → [ EDA ] → [ Decomposição STL ] → [ Diagnóstico ACF/PACF ]  → [ Síntese dos Achados ]"
       ],
       "metadata": {
         "id": "mLIXqlmC9gu_"
@@ -1016,11 +1016,11 @@
         "        print(f\"{col}: {desc}\")"
       ],
       "metadata": {
-        "id": "fDkRrRcs9NXA",
-        "outputId": "7b1b6595-2d73-418f-de20-a413ff45a258",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fDkRrRcs9NXA",
+        "outputId": "7b1b6595-2d73-418f-de20-a413ff45a258"
       },
       "execution_count": 2,
       "outputs": [
@@ -4441,7 +4441,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# ACF e PACF"
+        "## ACF e PACF"
       ],
       "metadata": {
         "id": "ZrSSJ8M6srAB"
@@ -4609,7 +4609,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Análise dos resultados"
+        "### Análise dos resultados"
       ],
       "metadata": {
         "id": "ikYddLLBIIKO"
@@ -4637,7 +4637,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Conclusão"
+        "### Conclusão"
       ],
       "metadata": {
         "id": "a1PL2qRKJx5Q"
